# Private-Bot

./: .gitignore  AV_Catalog.json  Commands.json  Config.json  load_catalog.py  main.py  new_main.py  pyproject.toml  utils.py
extensions/: dicti_cog.py  fun.py  games.py  general.py  music_cog.py  rt_cog.py  rxnrole.py  tester.py  tmdb_cog.py
