[tool.poetry]
name = "repl_python3_Private-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
emoji = "^1.2.0"
youtube-dl = "^2021.5.16"
rtsimple = "^0.9.0"
tmdbv3api = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
